Fix - submit button spacing

--- a/assets/sass/_theme-style.scss
+++ b/assets/sass/_theme-style.scss
@@ -501,6 +501,10 @@ textarea {
 	width: 100%;
 }
 
+button[type="submit"] {
+	margin-bottom: 50px;
+}
+
 /*--------------------------------------------------------------
 Links
 --------------------------------------------------------------*/
