--- a/style-rtl.css
+++ b/style-rtl.css
@@ -512,6 +512,10 @@ textarea {
 	width: 100%;
 }
 
+button[type="submit"] {
+	margin-bottom: 50px;
+}
+
 /*--------------------------------------------------------------
 Links
 --------------------------------------------------------------*/
